--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,14 +2,19 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Módulo 1-Evaluación final</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/reset.scss" />
   </head>
-
-  <body></body>
+  <body>
+    <include>header</include>
+    <include>main</include>
+    <include>body</include>
+  </body>
 </html>
