Add partial tips and partial reason

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,8 +13,12 @@
     <link rel="stylesheet" href="./assets/css/reset.scss" />
   </head>
   <body>
-    <include>header</include>
-    <include>main</include>
-    <include>body</include>
+    <include src="./partials/header.html"></include>
+    <main>
+      <include>tips</include>
+      <include>reasons</include>
+    </main>
+
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
