Add includes in index.html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Módulo 1-Evaluación final</title>
+    <style></style>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -15,8 +16,8 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
-      <include>tips</include>
-      <include>reasons</include>
+      <include src="./partials/tips.html"></include>
+      <include src="./partials/reasons.html"></include>
     </main>
 
     <include src="./partials/footer.html"></include>
