--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/hero.html"></include>
+      <include src="./partials/cover.html"></include>
       <include src="./partials/tips.html"></include>
       <include src="./partials/reasons.html"></include>
     </main>
