add technical interview

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,7 @@
     <main>
       <include src="./partials/cover.html"></include>
       <include src="./partials/tips.html"></include>
+      <include src="partials/section-pricing.html"></include>
       <include src="./partials/reasons.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
