--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Módulo 1-Evaluación final</title>
-    <style></style>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="stylesheet" href="./assets/css/reset.scss" />
-  </head>
-  <body>
-    <include src="./partials/header.html"></include>
-    <main>
-      <include src="./partials/cover.html"></include>
-      <include src="./partials/tips.html"></include>
-      <include src="./partials/reasons.html"></include>
-    </main>
-    <include src="./partials/footer.html"></include>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Módulo 1-Evaluación final</title>
+  <style></style>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;505;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="stylesheet" href="./assets/css/reset.scss" />
+</head>
+
+<body class="body">
+  <include class="header" src="./partials/header.html"></include>
+  <include class="main" src="./partials/main.html"></include>
+  <include class="footer" src="./partials/footer.html"></include>
+</body>
+
 </html>
