--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,7 +17,9 @@
 
 <body class="body">
   <include class="header" src="./partials/header.html"></include>
-  <include class="main" src="./partials/main.html"></include>
+  <main>
+    <include class="hero" src="./partials/hero.html"></include>
+  </main>
   <include class="footer" src="./partials/footer.html"></include>
 </body>
 
