--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
   <include class="header" src="./partials/header.html"></include>
   <main>
     <include class="hero" src="./partials/hero.html"></include>
+    <include class="tips" src="./partials/tips.html"></include>
   </main>
   <include class="footer" src="./partials/footer.html"></include>
 </body>
