--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,7 @@
   <main>
     <include class="hero" src="./partials/hero.html"></include>
     <include class="tips" src="./partials/tips.html"></include>
+    <include class="reasons" src="./partials/reasons.html"></include>
   </main>
   <include class="footer" src="./partials/footer.html"></include>
 </body>
